<resources>
    <string name="app_name">Tic-tac-toe</string>
    <string name="difficulty_prompt">Choose difficulty</string>
    <string-array name="mode_array">
        <item>3 X 3</item>
        <item>5 X 5</item>
    </string-array>

    <string name="game_name">Tic-Tac-Toe</string>
    <string name="number_of_players">Select Number Of Players</string>
    <string name="mode_name">Game Mode</string>
    <string name="play_button_text">Play</string>
    <string name="ask_player1name_text">Enter the name of Player 1:</string>
    <string name="player1name_text_hint">Player 1</string>
    <string name="ask_player2name_text">Enter the name of Player 2:</string>
    <string name="player2name_text_hint">Player 2</string>
    <string name="player_name">Please enter your name:</string>
    <string name="ask_numofgames_text">How many games are you playing?</string>
    <string name="number_of_games_hint">Number of games</string>
    <string name="playernames_submit_button">Done</string>
    <string name="default_player_turn_text">Player 1\'s turn (X)</string>
    <string name="restart_game_button_text">Restart Game</string>
    <string name="restart_match_button_text">Restart Match</string>
    <string name="blank_string" />
    <string name="player_2_default_name">Player 2</string>
    <string name="player_1_default_name">Player 1</string>
    <string name="initial_games_played_0">0</string>
    <string name="bar_demarcate_scores">|</string>
    <string name="continue_button_text">Continue</string>
    <string name="result_text">Game Results</string>
    <string name="default_max_games">999</string>
    <string name="default_min_games">1</string>
    <string name="x_turn">\'s turn (X)</string>
    <string name="o_turn">\'s turn (O)</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://www.tic-tac-toe.com\",\n  }\n}]</string>

</resources>
