<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/denim2"
    tools:context="com.example.android.tic_tac_toe.OneplayerActivity"
    android:fillViewport="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/game_name"
            android:textColor="#ffd700"
            android:textSize="41sp"
            android:textAllCaps="true"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="12dp"
            android:textAlignment="center"

            />
        <TextView
            android:id="@+id/player"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="0.3"
            android:text="@string/default_player_turn_text"
            android:textSize="22sp"
            android:textColor="@android:color/holo_green_light"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="24dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7">

            <Button
                android:id="@+id/res"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/restart_game_button_text"
                android:onClick="newGame"
                android:background="#ffd700"
                android:textColor="#000638"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="16dp"
                android:padding="4dp" />

            <Button
                android:id="@+id/restartmatch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/restart_match_button_text"
                android:onClick="newMatch"
                android:background="#FFD700"
                android:textColor="#000638"
                android:layout_marginStart="24dp"
                android:layout_marginLeft="24dp"
                android:layout_marginBottom="16dp"
                android:padding="4dp" />

        </LinearLayout>

        <GridLayout
            android:id="@+id/grid"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:columnCount="3"
            android:rowCount="3"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <Button
                android:id="@+id/a11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "
                android:textColor="#ffd700"
                android:textAlignment="center"
                android:textSize="50sp"
                android:onClick="playmove"
                android:background="#000638"
                android:layout_margin="4dp"

                />
            <Button
                android:id="@+id/a12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:textSize="50sp"
                android:onClick="playmove"
                android:background="#000638"
                android:layout_margin="4dp"
                android:textColor="#ffd700"/>
            <Button
                android:id="@+id/a13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:textSize="50sp"
                android:onClick="playmove"
                android:background="#000638"
                android:layout_margin="4dp"
                android:textColor="#ffd700"/>

            <Button
                android:id="@+id/a21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:textSize="50sp"
                android:onClick="playmove"
                android:background="#000638"
                android:layout_margin="4dp"
                android:textColor="#ffd700"/>
            <Button
                android:id="@+id/a22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:textSize="50sp"
                android:onClick="playmove"
                android:background="#000638"
                android:layout_margin="4dp"
                android:textColor="#ffd700"/>
            <Button
                android:id="@+id/a23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:textSize="50sp"
                android:onClick="playmove"
                android:background="#000638"
                android:layout_margin="4dp"
                android:textColor="#ffd700"/>


            <Button
                android:id="@+id/a31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:onClick="playmove"
                android:textSize="50sp"
                android:background="#000638"
                android:layout_margin="4dp"
                android:textColor="#ffd700"
                />


            <Button
                android:id="@+id/a32"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textSize="50sp"
                android:textAlignment="center"
                android:onClick="playmove"
                android:background="#000638"
                android:layout_margin="4dp"
                android:textColor="#ffd700"/>
            <Button
                android:id="@+id/a33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" "

                android:textAlignment="center"
                android:textSize="50sp"
                android:onClick="playmove"
                android:background="#000638"
                android:layout_margin="4dp"
                android:textColor="#ffd700"/>

        </GridLayout>

    </LinearLayout>

</ScrollView>